--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ sitemap:
 					<div id="intro">
             <h1>{{site.title}}</h1>
 						<h2>一个金融民工的自我修养</h2>
-						<p>一个金融民工的自我修养</p>
+						<p>42 Is the Answer to the Ultimate Question of Life, the Universe, and Everything.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
