--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ sitemap:
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">2021-01-01 庚子年冬月十八</a></h2>
+									<h2><a href="#">2021-01-01 庚子年开始</a></h2>
 									<p>Time is going by so much faster than I.</p>
 								</header>
 								<a href="#" class="image main"><img src="{{ "/images/2021-01-01_pic_1.jpg" | absolute_url }}" alt="" /></a>
