--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ sitemap:
 							</article>
 
 						<!-- Posts -->
-							<section class="posts">
+							<!-- <section class="posts">
                 {% for post in site.posts limit:3 %}
                 {% assign mod3 = forloop.index | modulo: 4 %}
   								<article>
@@ -76,14 +76,14 @@ sitemap:
   								</article>
                 {% endfor %}
 
-							</section>
+							</section> -->
 
 						<!-- Footer -->
-							<footer>
+							<!-- <footer>
                 <ul class="actions">
                   <li><a href="{{ "/blog/" | absolute_url }}" class="button">Our Blog</a></li>
                 </ul>
-							</footer>
+							</footer> -->
 
 					</div>
 
