--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@ sitemap:
 					</div>
 
 				<!-- Footer -->
-        {% include foot.html %}
+        <!-- {% include foot.html %} -->
 
 			</div>
 
 		<!-- Scripts -->
-		{% include scripts-main.html %}
-    {% include tracking.html %}
+		<!-- {% include scripts-main.html %}
+    {% include tracking.html %} -->
 
 	</body>
 </html>
