--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@ sitemap:
                 </ul>
 							</footer> -->
 
-					</div>
+					<!-- </div> -->
 
 				<!-- Footer -->
-        <!-- {% include foot.html %} -->
+        {% include foot.html %}
 
 			</div>
 
 		<!-- Scripts -->
-		<!-- {% include scripts-main.html %}
-    {% include tracking.html %} -->
+		{% include scripts-main.html %}
+    {% include tracking.html %}
 
 	</body>
 </html>
