--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@ sitemap:
 							</section> -->
 
 						<!-- Footer -->
-							<!-- <footer>
+							<footer>
                 <ul class="actions">
-                  <li><a href="{{ "/blog/" | absolute_url }}" class="button">Our Blog</a></li>
+                  <li><a href="{{ "/blog/" | absolute_url }}" class="button">To Blog</a></li>
                 </ul>
-							</footer> -->
+							</footer>
 
-					<!-- </div> -->
+					</div>
 
 				<!-- Footer -->
         {% include foot.html %}
